last td alignment fixed

--- a/assets/css/v20Style.less
+++ b/assets/css/v20Style.less
@@ -217,9 +217,9 @@ input {
           i {
             color: lighten(@basetextColor, 45%);
           }
-          &:last-child{
-            text-align:right;
-          }
+          // &:last-child{
+          //   text-align:right;
+          // }
         }
       }
       tbody {
@@ -238,9 +238,9 @@ input {
             &.log-comment {
               white-space: initial !important;
             }
-            &:last-child{
-              text-align:right;
-            }
+            // &:last-child{
+            //   text-align:right;
+            // }
           }
         }
       }
