--- a/assets/css/v20Style_d.less
+++ b/assets/css/v20Style_d.less
@@ -233,9 +233,9 @@ body{
                     i{
                         color:lighten(@basetextColor,45%);
                     }
-                    &:last-child{
-                        text-align:right;
-                      }
+                    // &:last-child{
+                    //     text-align:right;
+                    //   }
                 }
             }
             tbody{
@@ -254,9 +254,9 @@ body{
                         &.log-comment{
                             white-space: initial !important;
                         }
-                        &:last-child{
-                            text-align:right;
-                          }
+                        // &:last-child{
+                        //     text-align:right;
+                        //   }
                     }
                 }
             }
